# notnemo

./: AGENTS.md  README.md  conductor.json  package-lock.json
backend/: Dockerfile  README.md  fly.toml  main.py  pyproject.toml
backend/backend/: __init__.py  app.py  config.py  db.py  domains.py  embeddings.py  export_openapi.py  ingress.py  manual_cli.py  models.py  normalize.py  openai_explorer.py  openapi.py  restate_services.py  routes.py  seeds.py  tinyfish.py  utils.py
backend/openapi/: openapi.json  openapi.yaml
backend/scripts/: search_cli.py
backend/tests/: test_manual_cli.py  test_openai_explorer.py  test_openapi.py  test_query_helpers.py  test_search_api.py  test_tinyfish.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  intro-form.tsx  layout.tsx  page.tsx
frontend/app/explore/: explore-form.tsx  page.tsx
frontend/app/exploring/: page.tsx
frontend/app/lib/: api.ts  search-session.ts
infra/db/: Dockerfile  fly.toml
infra/restate/: fly.toml
scripts/: run-backend.sh  setup.sh
